--- a/src/views/layouts/main.handlebars
+++ b/src/views/layouts/main.handlebars
@@ -7,6 +7,29 @@
     <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+     <header>
+        <a href="/">
+            <h1>Nebula</h1>
+        </a>
+        <div>
+            <div class="dropdown">
+                <button class="dropdown-toggle">
+                    <span>▼</span> <!-- Flecha para activar el menú -->
+                </button>
+                <div id="dropdown-menu" class="dropdown-menu">
+                    <ul>
+                        <li><a href="/user/profile">Perfil</a></li>
+                        <li><a href="/user/panel">Panel</a></li>
+                        <li><span id="btn-logout">Logout</span></li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </header>
     {{{body}}}
+     <footer>
+        <p>Desarrollado por <a href="https://www.linkedin.com/in/geiderfrias/">Geider Frias</a>.</p>
+    </footer>
 </body>
 </html>
+<script src="/js/main.js"></script>
