--- a/src/views/products.handlebars
+++ b/src/views/products.handlebars
@@ -38,7 +38,7 @@
     {{/if}} 
 </div>
 {{else}}
-<h1>No hay estudiantes para mostrar</h1>
+<h1>Opps, no hay productos. Vuelva a intentarlo más tarde.</h1>
 {{/if}}
 
-<script src="/js/productsManager.js"></script>
+<script src="/js/products.js"></script>
